# de.anesda.audiomultiverse

./: .gitignore  Jenkinsfile  README.md  TODO.md  package.json  pnpm-workspace.yaml
app/: .gitkeep  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
app/src/: app.css  app.html
app/src-tauri/: Cargo.toml  package.json  tauri.conf.json
app/src-tauri/src/: discovery.rs  main.rs
app/src-tauri/src/midi/: controller.rs  feedback.rs  mod.rs
app/src/lib/: midi.ts  midiBridge.ts  websocket.ts
app/src/lib/api/: websocket.ts
app/src/lib/components/: ChannelStrip.svelte  Fader.svelte  Meter.svelte  MeterBridge.svelte  RoutingMatrix.svelte  ScenesView.svelte  ServerDiscovery.svelte  SettingsView.svelte  Toolbar.svelte
app/src/lib/stores/: connection.ts  mixer.ts
app/src/routes/: +page.svelte
deploy/: .gitkeep
deploy/innosetup/: remote.iss
deploy/jenkins/: AGENTS.md
deploy/linux/: audiomultiverse.service  postinst.sh
deploy/systemd/: audiomultiverse.service
docs/: .gitkeep
remote/: .gitkeep  package.json  tailwind.config.js  vite.config.ts
remote/src/: app.css  app.html
remote/src-tauri/: Cargo.toml  tauri.conf.json
remote/src-tauri/src/: main.rs
remote/src/lib/api/: websocket.ts
remote/src/lib/components/: ChannelStrip.svelte  Fader.svelte  Meter.svelte  MixerView.svelte  ServerDiscovery.svelte  Toolbar.svelte
remote/src/lib/stores/: connection.ts  mixer.ts
remote/src/routes/: +page.svelte
server/: .gitkeep  Cargo.toml  Dockerfile  config.toml  config.toml.example  docker-compose.yml
server/src/: config.rs  discovery.rs  main.rs
server/src/api/: mod.rs  routes.rs  websocket.rs
server/src/audio/: engine.rs  eq.rs  mod.rs
server/src/midi/: controller.rs  feedback.rs  mod.rs
server/src/mixer/: channel.rs  master.rs  mod.rs  routing.rs  scenes.rs
server/src/network_audio/: backend.rs  mod.rs  ptp.rs  rtp.rs  sap.rs
shared/: .gitkeep
shared/protocol/: Cargo.toml
shared/protocol/src/: lib.rs  messages.rs  types.rs
