[package]
name = "audiomultiverse-server"
version = "0.1.0"
edition = "2021"
description = "AudioMultiverse Server - Audio Engine, AES67/DANTE, MIDI, API"
authors = []
license = "MIT"

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Web Framework & API
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Audio
cpal = "0.15"
# jack = "0.11"  # Uncomment for JACK support on Linux

# MIDI
midir = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
shellexpand = "3.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# mDNS/DNS-SD for server discovery
mdns-sd = "0.11"
hostname = "0.4"

# Shared protocol definitions
audiomultiverse-protocol = { path = "../shared/protocol" }

[dev-dependencies]
tokio-test = "0.4"

[package.metadata.deb]
maintainer = "AudioMultiverse Team"
section = "sound"
priority = "optional"
assets = [
    ["target/release/audiomultiverse-server", "usr/bin/", "755"],
    ["config.toml.example", "etc/audiomultiverse/config.toml", "644"],
]
