[package]
name = "audiomultiverse-server"
version = "0.1.0"
edition = "2021"
description = "AudioMultiverse Server - Audio Engine, AES67/DANTE, MIDI, API"
authors = []
license = "MIT"

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Web Framework & API
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Audio
cpal = "0.15"
# jack = "0.11"  # Uncomment for JACK support on Linux

# AES67/Network Audio (core - all platforms)
socket2 = "0.5"                    # Low-level socket control for multicast
bytes = "1.5"                      # Buffer handling for RTP
byteorder = "1.5"                  # Network byte order for RTP packets
rand = "0.8"                       # RTP SSRC generation
parking_lot = "0.12"               # Fast mutexes for audio thread

# MIDI
midir = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
shellexpand = "3.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# mDNS/DNS-SD for server discovery
mdns-sd = "0.11"
hostname = "0.4"

# Shared protocol definitions
audiomultiverse-protocol = { path = "../shared/protocol" }

# AES67/PTP - Linux only (statime-linux requires Unix socket APIs)
[target.'cfg(target_os = "linux")'.dependencies]
statime = "0.4"                    # PTP (IEEE 1588) Clock Sync
statime-linux = "0.4"              # PTP Linux implementation

[dev-dependencies]
tokio-test = "0.4"

[package.metadata.deb]
maintainer = "AudioMultiverse Team"
section = "sound"
priority = "optional"
assets = [
    ["target/release/audiomultiverse-server", "usr/bin/", "755"],
    ["config.toml.example", "etc/audiomultiverse/config.toml", "644"],
]
