[package]
name = "audiomultiverse-app"
version = "0.1.0"
description = "AudioMultiverse App - Local Touchscreen UI"
authors = []
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "window-all", "dialog-all", "fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
midir = "0.9"
tokio = { version = "1", features = ["sync", "rt"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
audiomultiverse-protocol = { path = "../../shared/protocol" }

# mDNS/DNS-SD for server discovery
mdns-sd = "0.11"
flume = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
