[package]
name = "audiomultiverse-remote"
version = "0.1.0"
description = "AudioMultiverse Remote Control"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "audiomultiverse_remote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.0"
